# strbot_ws

./: .gitignore  README.md  astar_kinematic_metrics.csv  fast_livo2_sim.rviz  gmpc_traj.csv  mpc_ref.csv  mpc_traj.csv
src/FAST-LIVO2/config/: camera_real.yaml  ttbot_real.yaml  ttbot_sim.yaml
src/FAST-LIVO2/launch/: fast_livo_real.launch.py  fast_livo_sim.launch.py
src/FAST-LIVO2/rviz_cfg/: fast_livo2.rviz
src/FAST-LIVO2/src/: LIVMapper.cpp
src/FAST_LIO/config/: velodyne.yaml  velodyne_real.yaml  velodyne_sim.yaml
src/FAST_LIO/launch/: fast_lio_all.launch.py  fast_lio_real.launch.py  fast_lio_sim.launch.py
src/FAST_LIO/rviz/: fast_lio_real.rviz  fastlio_sim.rviz  nav2.rviz
src/FAST_LIO/src/: laserMapping.cpp
src/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
src/ttbot_bringup/launch/: mapping_real.launch.py  real.launch.py  sim.launch.py
src/ttbot_controller/: CMakeLists.txt  package.xml
src/ttbot_controller/config/: gmpc_params.yaml  mpc_params.yaml
src/ttbot_controller/include/ttbot_controller/: gmpc_controller.hpp
src/ttbot_controller/launch/: gmpc.launch.py  mpc.launch.py  path_publisher.launch.py
src/ttbot_controller/path/: circle.csv  path_8.csv  path_circle.csv  path_circle_r5.csv  path_square.csv  path_straight7_right7.csv  scaled_path.csv
src/ttbot_controller/scripts/: mpc_state_filter.py
src/ttbot_controller/src/: generate_paths.py  gmpc_controller.cpp  mpc_controller.cpp  path_publisher.cpp
src/ttbot_description/launch/: gazebo.launch.py
src/ttbot_description/urdf/: ttbot.urdf.xacro  ttbot_gazebo.xacro
src/ttbot_description/worlds/: gps_world.sdf
src/ttbot_localization/: CMakeLists.txt  package.xml
src/ttbot_localization/config/: ekf copy.yaml  ekf.yaml  ekf_enc.yaml  ekf_global_livo_lio.yaml  ekf_test.yaml  fastlio_odom_aligner.yaml  icp_localizer.yaml
src/ttbot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/ttbot_localization/src/: fastlio_odom_aligner.cpp  initial_icp_localizer.cpp
src/ttbot_mapping/: CMakeLists.txt
src/ttbot_mapping/config/: mapper_params.yaml
src/ttbot_mapping/launch/: amcl.launch.py  mapping_real.launch.py  mapping_sim.launch.py  pointcloud_to_laserscan.launch.py
src/ttbot_mapping/maps/: bk_map.pgm  bk_map.yaml  bk_map_ck.yaml  outdoor_map.pgm  outdoor_map.yaml  planning_map.pgm  planning_map.yaml  warehouse_map.yaml
src/ttbot_monitor/: check_tracking.py  tracking_eval_and_record.py
src/ttbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/ttbot_motion/include/ttbot_motion/: mpc_controller.hpp
src/ttbot_motion/src/: mpc_controller.cpp  obstacle_avoider.cpp
src/ttbot_navigation/: CMakeLists.txt  package.xml
src/ttbot_navigation/behavior_tree/: nav_through_poses.xml  simple_navigation.xml
src/ttbot_navigation/config/: bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/ttbot_navigation/launch/: navigation.launch.py
src/ttbot_navigation/scripts/: path_aggregator.py
src/ttbot_planning/: CMakeLists.txt  global_planner_plugins.xml
src/ttbot_planning/include/ttbot_planning/: a_star_planner.hpp  a_star_planner_new.hpp
src/ttbot_planning/src/: a_star_planner.cpp  a_star_planner_new.cpp
src/ttbot_viewer/: 10. tracking.py
src/ttbot_viewer/paper/hinh vuong/: mpc_traj_sq.csv
src/ttbot_viewer/paper/so8/: mpc_traj.csv
src/ttbot_viewer/paper/tron/: plot_o.py
src/ttbot_viewer/paper/vuong/: mpc_traj_sq.csv  plot_sq.py
